Corrected the validation notebook to do screenline regresseion with right set of data

--- a/scripts/summarize/notebooks/validation/validation.ipynb
+++ b/scripts/summarize/notebooks/validation/validation.ipynb
@@ -1523,7 +1523,7 @@
     "ax.set_xlim(0,lim)\n",
     "x = np.linspace(*ax.get_xlim())\n",
     "ax.plot(x, x)\n",
-    "slope, intercept, r_value, p_value, std_err = stats.linregress(df['observed'],df['modeled'])\n",
+    "slope, intercept, r_value, p_value, std_err = stats.linregress(df1['observed'],df1['modeled'])\n",
     "print('r^2 : ' + str(r_value))"
    ]
   },
@@ -1835,7 +1835,7 @@
     "ax.set_xlim(0,lim)\n",
     "x = np.linspace(*ax.get_xlim())\n",
     "ax.plot(x, x)\n",
-    "slope, intercept, r_value, p_value, std_err = stats.linregress(df['observed'],df['modeled'])\n",
+    "slope, intercept, r_value, p_value, std_err = stats.linregress(df2['observed'],df2['modeled'])\n",
     "print('r^2 : ' + str(r_value))"
    ]
   },
