Resolved bug with supplemental trips, distribute ixxi trips, and truck trips. Fixed bug in validation notebook

--- a/scripts/summarize/notebooks/validation/validation.ipynb
+++ b/scripts/summarize/notebooks/validation/validation.ipynb
@@ -2147,6 +2147,7 @@
     "sorted_values = df.sort_values('observed_5to20', ascending=False).agency.to_list() + ['TOTAL']\n",
     "df = df.append(df.sum(numeric_only=True), ignore_index=True)\n",
     "df.at[df.index[-1], 'agency'] = 'TOTAL'\n",
+    "df[['perc_diff']] = df['diff']/df['observed_5to20']\n",
     "df[['perc_diff']] = df[['perc_diff']].applymap(format_percent)\n",
     "df.set_index('agency').reindex(sorted_values)"
    ]
@@ -2328,6 +2329,7 @@
     "sorted_values = _df.sort_values('observed_5to20', ascending=False).description.to_list() + ['TOTAL']\n",
     "_df = _df.append(_df.sum(numeric_only=True), ignore_index=True)\n",
     "_df.at[_df.index[-1], 'description'] = 'TOTAL'\n",
+    "_df[['perc_diff']] = _df['diff']/_df['observed_5to20']\n",
     "_df[['perc_diff']] = _df[['perc_diff']].applymap(format_percent)\n",
     "_df"
    ]
