Updated the validation script and notebook. removed the soundcast.exe file

--- a/scripts/summarize/notebooks/validation/validation.ipynb
+++ b/scripts/summarize/notebooks/validation/validation.ipynb
@@ -622,13 +622,7 @@
      "text": [
       "King r^2: 0.9704228398849531\n",
       "Kitsap r^2: 0.9523983381382319\n",
-      "Pierce r^2: 0.9750216330382248\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Pierce r^2: 0.9750216330382248\n",
       "Snohomish r^2: 0.936750084629409\n"
      ]
     },
@@ -3373,24 +3367,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r^2 Community Transit: 0.8542582849944188\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "r^2 Community Transit: 0.8542582849944188\n",
       "r^2 Everett Transit: -0.36169458869368076\n",
       "r^2 King County Metro: 0.9222646329335957\n",
       "r^2 Kitsap Transit: 0.7969623914657941\n",
       "r^2 Pierce Transit: 0.8348416602380545\n",
-      "r^2 Sound Transit: 0.9930538641582604\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "r^2 Sound Transit: 0.9930538641582604\n",
       "r^2 Washington Ferries: 0.9257038462611012\n"
      ]
     },
@@ -4839,7 +4821,13 @@
    ],
    "source": [
     "df = pd.read_csv(os.path.join(relative_path,'validation/') + 'corridor_speeds.csv')\n",
-    "df.plot(kind='scatter', y='model_speed', x='observed_speed')"
+    "ax = df.plot(kind='scatter', y='model_speed', x='observed_speed')\n",
+    "maxlim = df[['observed_speed','model_speed']].max().max()*1.05\n",
+    "minlim = df[['observed_speed','model_speed']].min().min()*0.95\n",
+    "ax.set_ylim(minlim,maxlim)\n",
+    "ax.set_xlim(minlim,maxlim)\n",
+    "x = np.linspace(*ax.get_xlim())\n",
+    "ax.plot(x, x)"
    ]
   },
   {
@@ -4878,7 +4866,13 @@
     }
    ],
    "source": [
-    "df.loc[df.county=='Pierce'].plot(kind='scatter', y='model_speed', x='observed_speed')"
+    "ax = df.loc[df.county=='Pierce'].plot(kind='scatter', y='model_speed', x='observed_speed')\n",
+    "maxlim = df.loc[df.county=='Pierce'][['observed_speed','model_speed']].max().max()*1.05\n",
+    "minlim = df.loc[df.county=='Pierce'][['observed_speed','model_speed']].min().min()*0.95\n",
+    "ax.set_ylim(minlim,maxlim)\n",
+    "ax.set_xlim(minlim,maxlim)\n",
+    "x = np.linspace(*ax.get_xlim())\n",
+    "ax.plot(x, x)"
    ]
   },
   {
@@ -4920,7 +4914,13 @@
     "_df = df.loc[df.county!='Pierce']\n",
     "_df = _df.groupby(['Corridor_Number', 'tod'], as_index=False).agg({'auto_time':sum, 'length':sum,'observed_speed':np.mean}).\\\n",
     "assign(model_speed=lambda xdf: xdf.length*60/xdf.auto_time)\n",
-    "_df.plot(kind='scatter', y='model_speed', x='observed_speed')"
+    "ax = _df.plot(kind='scatter', y='model_speed', x='observed_speed')\n",
+    "maxlim = _df[['observed_speed','model_speed']].max().max()*1.05\n",
+    "minlim = _df[['observed_speed','model_speed']].min().min()*0.95\n",
+    "ax.set_ylim(minlim,maxlim)\n",
+    "ax.set_xlim(minlim,maxlim)\n",
+    "x = np.linspace(*ax.get_xlim())\n",
+    "ax.plot(x, x)"
    ]
   },
   {
@@ -4960,7 +4960,13 @@
    ],
    "source": [
     "df = pd.read_csv(os.path.join(relative_path,'validation/') + 'corridor_speeds.csv')\n",
-    "df[df['tod'] == '7to8'].plot(kind='scatter', x='observed_speed', y='model_speed')"
+    "ax = df[df['tod'] == '7to8'].plot(kind='scatter', x='observed_speed', y='model_speed')\n",
+    "maxlim = df[df['tod'] == '7to8'][['observed_speed','model_speed']].max().max()*1.05\n",
+    "minlim = df[df['tod'] == '7to8'][['observed_speed','model_speed']].min().min()*0.95\n",
+    "ax.set_ylim(minlim,maxlim)\n",
+    "ax.set_xlim(minlim,maxlim)\n",
+    "x = np.linspace(*ax.get_xlim())\n",
+    "ax.plot(x, x)"
    ]
   },
   {
@@ -5150,7 +5156,7 @@
    ],
    "source": [
     "# Show daily AM and PM peaks by corridor\n",
-    "df[df['tod'] == '7to8'][['Corridor_Description','model_speed','observed_speed']].head(20)"
+    "df[df['tod'] == '7to8'].assign(diff=lambda _df: np.abs(_df.model_speed-_df.observed_speed)).sort_values('diff', ascending=False)[['Corridor_Description','model_speed','observed_speed']].head(20)"
    ]
   },
   {
@@ -5191,7 +5197,13 @@
    "source": [
     "df = pd.read_csv(os.path.join(relative_path,'validation/') + 'corridor_speeds_county.csv')\n",
     "df = df.loc[df.county=='Pierce']\n",
-    "df[df['tod'] == '7to8'].plot(kind='scatter', x='observed_speed', y='model_speed')"
+    "ax = df[df['tod'] == '7to8'].plot(kind='scatter', x='observed_speed', y='model_speed')\n",
+    "maxlim = df[df['tod'] == '7to8'][['observed_speed','model_speed']].max().max()*1.05\n",
+    "minlim = df[df['tod'] == '7to8'][['observed_speed','model_speed']].min().min()*0.95\n",
+    "ax.set_ylim(minlim,maxlim)\n",
+    "ax.set_xlim(minlim,maxlim)\n",
+    "x = np.linspace(*ax.get_xlim())\n",
+    "ax.plot(x, x)"
    ]
   },
   {
@@ -5363,7 +5375,7 @@
    ],
    "source": [
     "# Show daily AM and PM peaks by corridor\n",
-    "df[df['tod'] == '7to8'][['Corridor_Description','model_speed','observed_speed']].head(20)"
+    "df[df['tod'] == '7to8'].assign(diff=lambda _df: np.abs(_df.model_speed-_df.observed_speed)).sort_values('diff', ascending=False)[['Corridor_Description','model_speed','observed_speed']].head(20)"
    ]
   },
   {
@@ -5406,7 +5418,13 @@
     "df = df.loc[df.county!='Pierce']\n",
     "df = df.groupby(['Corridor_Number', 'Corridor_Description', 'tod'], as_index=False).agg({'auto_time':sum, 'length':sum,'observed_speed':np.mean}).\\\n",
     "assign(model_speed=lambda df: df.length*60/df.auto_time)\n",
-    "df[df['tod'] == '7to8'].plot(kind='scatter', x='observed_speed', y='model_speed')"
+    "ax = df[df['tod'] == '7to8'].plot(kind='scatter', x='observed_speed', y='model_speed')\n",
+    "maxlim = df[df['tod'] == '7to8'][['observed_speed','model_speed']].max().max()*1.05\n",
+    "minlim = df[df['tod'] == '7to8'][['observed_speed','model_speed']].min().min()*0.95\n",
+    "ax.set_ylim(minlim,maxlim)\n",
+    "ax.set_xlim(minlim,maxlim)\n",
+    "x = np.linspace(*ax.get_xlim())\n",
+    "ax.plot(x, x)"
    ]
   },
   {
@@ -5596,7 +5614,7 @@
    ],
    "source": [
     "# Show daily AM and PM peaks by corridor\n",
-    "df[df['tod'] == '7to8'][['Corridor_Description','model_speed','observed_speed']].head(20)"
+    "df[df['tod'] == '7to8'].assign(diff=lambda _df: np.abs(_df.model_speed-_df.observed_speed)).sort_values('diff', ascending=False)[['Corridor_Description','model_speed','observed_speed']].head(20)"
    ]
   },
   {
@@ -5636,7 +5654,13 @@
    ],
    "source": [
     "df = pd.read_csv(os.path.join(relative_path,'validation/') + 'corridor_speeds.csv')\n",
-    "df[df['tod'] == '16to17'].plot(kind='scatter', x='observed_speed', y='model_speed')"
+    "ax = df[df['tod'] == '16to17'].plot(kind='scatter', x='observed_speed', y='model_speed')\n",
+    "maxlim = df[df['tod'] == '16to17'][['observed_speed','model_speed']].max().max()*1.05\n",
+    "minlim = df[df['tod'] == '16to17'][['observed_speed','model_speed']].min().min()*0.95\n",
+    "ax.set_ylim(minlim,maxlim)\n",
+    "ax.set_xlim(minlim,maxlim)\n",
+    "x = np.linspace(*ax.get_xlim())\n",
+    "ax.plot(x, x)"
    ]
   },
   {
@@ -5825,7 +5849,7 @@
     }
    ],
    "source": [
-    "df[df['tod'] == '16to17'][['Corridor_Description','model_speed','observed_speed']].head(20)"
+    "df[df['tod'] == '16to17'].assign(diff=lambda _df: np.abs(_df.model_speed-_df.observed_speed)).sort_values('diff', ascending=False)[['Corridor_Description','model_speed','observed_speed']].head(20)"
    ]
   },
   {
@@ -5866,7 +5890,13 @@
    "source": [
     "df = pd.read_csv(os.path.join(relative_path,'validation/') + 'corridor_speeds_county.csv')\n",
     "df = df.loc[df.county=='Pierce']\n",
-    "df[df['tod'] == '16to17'].plot(kind='scatter', x='observed_speed', y='model_speed')"
+    "ax = df[df['tod'] == '16to17'].plot(kind='scatter', x='observed_speed', y='model_speed')\n",
+    "maxlim = df[df['tod'] == '16to17'][['observed_speed','model_speed']].max().max()*1.05\n",
+    "minlim = df[df['tod'] == '16to17'][['observed_speed','model_speed']].min().min()*0.95\n",
+    "ax.set_ylim(minlim,maxlim)\n",
+    "ax.set_xlim(minlim,maxlim)\n",
+    "x = np.linspace(*ax.get_xlim())\n",
+    "ax.plot(x, x)"
    ]
   },
   {
@@ -6038,7 +6068,7 @@
    ],
    "source": [
     "# Show daily AM and PM peaks by corridor\n",
-    "df[df['tod'] == '16to17'][['Corridor_Description','model_speed','observed_speed']].head(20)"
+    "df[df['tod'] == '16to17'].assign(diff=lambda _df: np.abs(_df.model_speed-_df.observed_speed)).sort_values('diff', ascending=False)[['Corridor_Description','model_speed','observed_speed']].head(20)"
    ]
   },
   {
@@ -6081,7 +6111,13 @@
     "df = df.loc[df.county!='Pierce']\n",
     "df = df.groupby(['Corridor_Number', 'Corridor_Description', 'tod'], as_index=False).agg({'auto_time':sum, 'length':sum,'observed_speed':np.mean}).\\\n",
     "assign(model_speed=lambda df: df.length*60/df.auto_time)\n",
-    "df[df['tod'] == '16to17'].plot(kind='scatter', x='observed_speed', y='model_speed')"
+    "ax = df[df['tod'] == '16to17'].plot(kind='scatter', x='observed_speed', y='model_speed')\n",
+    "maxlim = df[df['tod'] == '16to17'][['observed_speed','model_speed']].max().max()*1.05\n",
+    "minlim = df[df['tod'] == '16to17'][['observed_speed','model_speed']].min().min()*0.95\n",
+    "ax.set_ylim(minlim,maxlim)\n",
+    "ax.set_xlim(minlim,maxlim)\n",
+    "x = np.linspace(*ax.get_xlim())\n",
+    "ax.plot(x, x)"
    ]
   },
   {
@@ -6271,7 +6307,7 @@
    ],
    "source": [
     "# Show daily AM and PM peaks by corridor\n",
-    "df[df['tod'] == '16to17'][['Corridor_Description','model_speed','observed_speed']].head(20)"
+    "df[df['tod'] == '16to17'].assign(diff=lambda _df: np.abs(_df.model_speed-_df.observed_speed)).sort_values('diff', ascending=False)[['Corridor_Description','model_speed','observed_speed']].head(20)"
    ]
   }
  ],
